# vectoRAG

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Caddyfile  Dockerfile  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx
frontend/src/components/LeftPanel/: AlgoSelector.tsx  InsertVector.tsx  Legend.tsx  LoadSynthetic.tsx  index.tsx
frontend/src/components/RightPanel/: BenchmarkBars.tsx  HNSWLayers.tsx  LatencyDisplay.tsx  LiveLatencyChart.tsx  ResultsList.tsx  SearchTab.tsx  Tabs.tsx  VectorChart.tsx  index.tsx
frontend/src/components/RightPanel/DocsTab/: DocList.tsx  InsertDocument.tsx  OllamaStatusCard.tsx  index.tsx
frontend/src/components/RightPanel/RAGTab/: ChatAnswer.tsx  index.tsx
frontend/src/components/Scatter/: ScatterPlot.tsx
frontend/src/components/ui/: primitives.tsx
frontend/src/types/: index.ts
frontend/src/utils/: pca.ts  textToEmbedding.ts
include/vectordb/: bruteforce.h  demo_data.h  distance.h  documentdb.h  hnsw.h  json_utils.h  kdtree.h  ollama_client.h  routes.h  storage.h  text_utils.h  types.h  vectordb.h
src/: bruteforce.cpp  demo_data.cpp  distance.cpp  documentdb.cpp  hnsw.cpp  json_utils.cpp  kdtree.cpp  main.cpp  ollama_client.cpp  routes.cpp  storage.cpp  text_utils.cpp  vectordb.cpp
